<resources>
    <string name="app_name">Minha Carteira Holder</string>

    <!-->ChartsFragment<-->
    <string name="my_wallet_title">Minha Carteira Holder</string>


    <string name="list_papers">Lista de Papéis</string>
    <string name="papers">Papéis</string>
    <string name="paper">Papel</string>
    <string name="initial">Sigla</string>
    <string name="description">Descrição</string>

    <string name="list_transactions">Lista de Transações</string>
    <string name="transactions">Transações</string>

    <string name="list_brokers">Lista de Corretoras</string>
    <string name="brokers">Corretoras</string>
    <string name="broker">Corretora</string>
    <string name="broker_name">Nome Corretora</string>

    <string name="broker_inserted_sucessfully">Corretora cadastrada com sucesso!</string>
    <string name="broker_error_to_insert">Ocorreu um erro ao cadastrar a corretora!</string>
    <string name="broker_updated_sucessfully">Corretora atualizada com sucesso!</string>
    <string name="broker_error_to_update">Ocorreu um erro ao atualizar a corretora!</string>
    <string name="broker_deleted_sucessfully">Corretora excluída com sucesso!</string>
    <string name="broker_error_to_delete">Ocorreu um erro ao excluir a corretora!</string>

    <string name="paper_inserted_sucessfully">Papel cadastrado com sucesso!</string>
    <string name="paper_error_to_insert">Ocorreu um erro ao cadastrar o papel!</string>
    <string name="paper_updated_sucessfully">Papel atualizado com sucesso!</string>
    <string name="paper_error_to_update">Ocorreu um erro ao atualizar o papel!</string>
    <string name="paper_deleted_sucessfully">Papel excluido com sucesso!</string>
    <string name="paper_error_to_delete">Ocorreu um erro ao excluir o papel!</string>


    <string name="transaction_inserted_sucessfully">Transação cadastrada com sucesso!</string>
    <string name="transaction_error_to_insert">Ocorreu um erro ao cadastrar a Transação!</string>
    <string name="transaction_updated_sucessfully">Transação atualizada com sucesso!</string>
    <string name="transaction_error_to_update">Ocorreu um erro ao atualizar a Transação!</string>
    <string name="transaction_deleted_sucessfully">Transação excluida com sucesso!</string>
    <string name="transaction_error_to_delete">Ocorreu um erro ao excluir a Transação!</string>


    <string name="quantidade">Quantidade</string>
    <string name="fator">Fator</string>
    <string name="valor_unitario">Valor Unitário</string>
    <string name="custos_taxas_e_emolumentos">Custos (Taxas e Emolumentos)</string>
    <string name="date">Data</string>
    <string name="transaction">Transação</string>
    <string name="transaction_type">Tipo de Transação</string>
    <string name="sem_dados_disponiveis">Sem dados Disponíveis</string>
    <string name="valor_total">Valor Total</string>
    <string name="block_delete">Essa transação não pode ser excluída</string>
</resources>